syntax = "proto3";

package merlin.transformer;

option go_package = "github.com/caraml-dev/merlin/pkg/transformer/spec";

import "transformer/spec/common.proto";

message Variable {
  string name = 1 ;
  oneof value {
    Literal literal = 2;
    string expression = 3;
    string jsonPath = 4;
    FromJson jsonPathConfig = 5;
  }
}

message Literal {
  oneof literal_value {
    string stringValue = 1;
    int64 intValue = 2;
    double floatValue = 3;
    bool boolValue = 4;
  }
}
